2015-04-22  Per Bothner  <per@bothner.com>

	* ApplicationMainSupport.java (setArgs): New method takes explicit
	argument count.

2015-04-18  Per Bothner  <per@bothner.com>

	* Declaration.java (scanNesting): New field.
	(getScanNesting, setScanNesting): Access methods.

	* LambdaExp.java (addParameter): New convenience method.

2015-04-16  Per Bothner  <per@bothner.com>

	* CatchClause.java (compile): Use Declaration#compileStore to
	save exception into variable - in case it is non-simple.

	* SetExp.java (apply): Handle null symbol.

2015-04-10  Per Bothner  <per@bothner.com>

	* ModuleExp.java (evalModule): Flush any messages from evalModule1
	before actually running module.

2015-04-03  Per Bothner  <per@bothner.com>

	* InlineCalls.java (visitQuoteExp): Revert previous change. It doesn't
	work when the argument is shared: VALIDATED is set the first time,
	and then this method is never called again.  Instead map boolean
	literals to primitive types at Lisp-rewrite-times.
	* ConditionalTarget.java (compileFromStack): Compute sig
	variable *after* call to asBooleanValue.

2015-04-02  Per Bothner  <per@bothner.com>

	* InlineCalls.java (visitQuoteExp): If the value is a Boolean that is
	not explicitly typed, change to use primitive boolean.

	* LambdaExp.java (compile): Null out moduleInstanceVar
	before caling emitLoadModuleMethod.

2015-03-30  Per Bothner  <per@bothner.com>

	* GenericProc.java (matchN): Remove convoluted logic.
	Instead make compatible with other matchX methods.

	* Expression.java (compileWithPosition): Do nothing if unreachable.
	Change 2-parameter method to just call 3-parameter method.
	(compileNotePosition): Inline into compileWithPosition and remove.
	* PrimProcedure.java (compileArgs): Update accordingly.

2015-03-26  Per Bothner  <per@bothner.com>

	* Declaration.java (setType): Don't set Variable's type, as it is
	redundant with the setting in allocateVarible.  Also, the old code
	was incorrect, as it didn't consider INDIRECT_BINDING.
